versions/25.1.0/docs/ProxyProfile.md
# ProxyProfile


## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**id** | **int** |  | 
**name** | **str** |  | 
**proxy_generator** | **str** |  | 
**type** | **str** |  | 
**resolution** | **str, none_type** |  | 
**rate_control** | **str** |  | 
**crf** | **int, none_type** |  | 
**bitrate** | **int, none_type** |  | 
**audio_bitrate** | **int** |  | 
**variants_limit** | **int** |  | 
**enable_dense_filmstrip** | **bool** |  | 
**enable_watermark** | **bool** |  | 
**watermark_image** | **str, none_type** |  | 
**watermark_position** | **str** |  | 
**watermark_opacity** | **float** |  | 
**watermark_size** | **float** |  | 
**enable_timecode** | **bool** |  | 
**timecode_position** | **str** |  | 
**timecode_opacity** | **float** |  | 
**timecode_size** | **float** |  | 
**lut** | **str, none_type** |  | 
**hotfolder_copy_to** | **str, none_type** |  | 
**hotfolder_read_from** | **str, none_type** |  | 
**hotfolder_queue_timeout** | **int** |  | 
**hotfolder_encode_timeout** | **int** |  | 
**vantage_workflow_id** | **str, none_type** |  | 
**external_transcoder_staging_path** | **str, none_type** |  | 
**allow_download** | **bool** |  | 
**external_transcoder** | **int, none_type** |  | 

[[Back to Model list]](../#documentation-for-models) [[Back to API list]](../#documentation-for-api-endpoints) [[Back to README]](../)


