versions/25.10.0/docs/ProxyProfile.md
# ProxyProfile


## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**id** | **int** |  | 
**watermark_image** | **str, none_type** |  | [readonly] 
**name** | **str** |  | 
**proxy_generator** | **str** |  | 
**type** | **str** |  | 
**resolution** | **str, none_type** |  | 
**rate_control** | **str** |  | 
**crf** | **int, none_type** |  | 
**bitrate** | **int, none_type** |  | 
**audio_bitrate** | **int** |  | 
**variants_limit** | **int** |  | 
**enable_dense_filmstrip** | **bool** |  | 
**image_format** | **str** |  | 
**codecs** | **str, none_type** |  | 
**enable_watermark** | **bool** |  | 
**watermark_position** | **str** |  | 
**watermark_opacity** | **float** |  | 
**watermark_size** | **float** |  | 
**enable_timecode** | **bool** |  | 
**timecode_position** | **str** |  | 
**timecode_opacity** | **float** |  | 
**timecode_size** | **float** |  | 
**lut** | **str, none_type** |  | 
**hotfolder_copy_to** | **str, none_type** |  | 
**hotfolder_read_from** | **str, none_type** |  | 
**hotfolder_queue_timeout** | **int** |  | 
**hotfolder_encode_timeout** | **int** |  | 
**vantage_workflow_id** | **str, none_type** |  | 
**external_transcoder_staging_path** | **str, none_type** |  | 
**allow_download** | **bool** |  | 
**keep_audio_layout** | **bool** |  | 
**external_transcoder** | **int, none_type** |  | 
**video_codec** | **str, none_type** | This is a legacy placeholder field for compatibility with previous SDK versions. It is always an empty string. | [optional] [readonly] 

[[Back to Model list]](../#documentation-for-models) [[Back to API list]](../#documentation-for-api-endpoints) [[Back to README]](../)


